syntax = "proto3";

package person;

option go_package = "./grpcexample";

message Person {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
}

message CreatePersonRequest {
  Person person = 1;
}

message CreatePersonResponse {
  Person person = 1;
  string message = 2;
}

message GetPersonRequest {
  string id = 1;
}

message GetPersonResponse {
  Person person = 1;
}

service PersonService {
  rpc CreatePerson(CreatePersonRequest) returns (CreatePersonResponse);
  rpc GetPerson(GetPersonRequest) returns (GetPersonResponse);
}